--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -36,73 +36,89 @@
     </style>
   </head>
   <body>
-    Dr. Eleanor Gaye
-Awesome Science faculty
-University of Awesome
-Bobtown, CA 99999,
-USA
-Tel: 123-456-7890
-Email: no_reply@example.com
-20 January 2016
-Miss Eileen Dover
-4321 Cliff Top Edge
-Dover, CT9 XXX
+<p><div class="sender-column">
+<strong>Dr. Eleanor Gaye</strong><br>
+Awesome Science faculty<br>
+University of Awesome<br>
+Bobtown, CA 99999,<br>
+USA<br>
+<strong>Tel: 123-456-7890</strong><br>
+<strong>Email: no_reply@example.com</strong><br>
+20 January 2016<br>
+</div></p>
+<p>
+<strong>Miss Eileen Dover</strong><br>
+4321 Cliff Top Edge<br>
+Dover, CT9 XXX<br>
 UK
-Re: Eileen Dover university application
-Dear Eileen,
-Thank you for your recent application to join us at the University of
+</p>
+<h1>Re: Eileen Dover university application</h1><br>
+<p>Dear Eileen,<br></p>
+<p>Thank you for your recent application to join us at the University of
 Awesome's science faculty to study as part of your PhD next year. I will
-answer your questions one by one, in the following sections.
-Starting dates
-We are happy to accommodate you starting your study with us at any time,
+answer your questions one by one, in the following sections.<br></p>
+<h2>Starting dates<br></h2>
+<p>We are happy to accommodate you starting your study with us at any time,
 however it would suit us better if you could start at the beginning of a
-semester; the start dates for each one are as follows:
-First semester: 9 September 2016
-Second semester: 15 January 2017
-Third semester: 2 May 2017
-Please let me know if this is ok, and if so which start date you would
-prefer.
-You can find more information about important university dates on our
-website.
-Subjects of study
-At the Awesome Science Faculty, we have a pretty open-minded research
+semester; the start dates for each one are as follows:<br>
+<br>
+<ul>
+<li>First semester: 9 September 2016</li>
+<li>Second semester: 15 January 2017</li>
+<li>Third semester: 2 May 2017</li>
+</ul></p>
+<br>
+<p>Please let me know if this is ok, and if so which start date you would
+prefer.<br></p>
+<br>
+<p>You can find more information about important university dates on our
+website.<br></p>
+
+<h2>Subjects of study<br></h2>
+<p>At the Awesome Science Faculty, we have a pretty open-minded research
 facility â as long as the subjects fall somewhere in the realm of
 science and technology. You seem like an intelligent, dedicated
 researcher, and just the kind of person we'd like to have on our team.
 Saying that, of the ideas you submitted we were most intrigued by are as
-follows, in order of priority:
-Turning H2O into wine, and the health benefits of Resveratrol (C14H12O3.)
-Measuring the effect on performance of funk bassplayers at temperatures
+follows, in order of priority:<br></p>
+<ol><br>
+<li>Turning H2O into wine, and the health benefits of Resveratrol (C14H12O3.)</li>
+<li>Measuring the effect on performance of funk bassplayers at temperatures
 exceeding 30Â°C (86Â°F), when the audience size exponentially increases
-(effect of 3 Ã 103 increasing to 3 Ã 104.)
-HTML and CSS constructs for representing musical scores.
-So please can you provide more information on each of these subjects,
+(effect of 3 Ã 103 increasing to 3 Ã 104.)</li>
+<li>HTML and CSS constructs for representing musical scores.</li>
+<br></ul>
+
+<p>So please can you provide more information on each of these subjects,
 including how long you'd expect the research to take, required staff and
-other resources, and anything else you think we'd need to know? Thanks.
-Exotic dance moves
-Yes, you are right! As part of my post-doctorate work, I did study exotic
+other resources, and anything else you think we'd need to know? Thanks.<br></p>
+<br>
+<h2>Exotic dance moves<br></h2>
+<p>Yes, you are right! As part of my post-doctorate work, I did study exotic
 tribal dances. To answer your question, my favourite dances are as
-follows, with definitions:
-Polynesian chicken dance
-A little known but very influential dance dating back as far as 300BC, a
+follows, with definitions:<br></p>
+<dl>
+<dt>Polynesian chicken dance<br></dt>
+<dd>A little known but very influential dance dating back as far as 300BC, a
 whole village would dance around in a circle like chickens, to encourage
-their livestock to be "fruitful".
-Icelandic brownian shuffle
-Before the Icelanders developed fire as a means of getting warm, they used
+their livestock to be "fruitful".<br></dd>
+<dt>Icelandic brownian shuffle<br></dt>
+<dd>Before the Icelanders developed fire as a means of getting warm, they used
 to practice this dance, which involved huddling close together in a circle
 on the floor, and shuffling their bodies around in imperceptibly tiny,
 very rapid movements. One of my fellow students used to say that he
-thought this dance inspired modern styles such as Twerking.
-Arctic robot dance
-An interesting example of historic misinformation, English explorers in
+thought this dance inspired modern styles such as Twerking.<br></dd>
+<dt>Arctic robot dance<br></dt>
+<dd>An interesting example of historic misinformation, English explorers in
 the 1960s believed to have discovered a new dance style characterized by
 "robotic", stilted movements, being practiced by inhabitants of Northern
 Alaska and Canada. Later on however it was discovered that they were just
-moving like this because they were really cold.
-For more of my research, see my exotic dance research page.
-Yours sincerely,
-Dr Eleanor Gaye
-University of Awesome motto: "Be awesome to each other." -- Bill S
-Preston, Esq
+moving like this because they were really cold.<br></dd>
+
+<p>For more of my research, see my exotic dance research page.<br></p>
+<p>Yours sincerely,<br></p>
+<p>Dr Eleanor Gaye<br></p>
+<p>University of Awesome motto: "Be awesome to each other." -- Bill S
+Preston, Esq</p>
   </body>
 </html>
