--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Author" content="Austin Clerget"
-    <title>Awesome science application correspondence</title>
+    <title="Awesome science application correspondence">
     <style>
         html {
             font-size:16px;
