--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -1,5 +1,4 @@
-<!<!DOCTYPE html>
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -61,34 +60,29 @@ answer your questions one by one, in the following sections.<br></p>
 <p>We are happy to accommodate you starting your study with us at any time,
 however it would suit us better if you could start at the beginning of a
 semester; the start dates for each one are as follows:<br>
-<br>
 <ul>
 <li>First semester: 9 September 2016</li>
 <li>Second semester: 15 January 2017</li>
 <li>Third semester: 2 May 2017</li>
 </ul></p>
-<br>
 <p>Please let me know if this is ok, and if so which start date you would
 prefer.<br></p>
-<br>
 <p>You can find more information about important university dates on our
 website.<br></p>
-
 <h2>Subjects of study<br></h2>
 <p>At the Awesome Science Faculty, we have a pretty open-minded research
 facility â as long as the subjects fall somewhere in the realm of
 science and technology. You seem like an intelligent, dedicated
 researcher, and just the kind of person we'd like to have on our team.
 Saying that, of the ideas you submitted we were most intrigued by are as
-follows, in order of priority:<br></p>
+follows, in order of priority:</p>
 <ol><br>
 <li>Turning H2O into wine, and the health benefits of Resveratrol (C14H12O3.)</li>
 <li>Measuring the effect on performance of funk bassplayers at temperatures
 exceeding 30Â°C (86Â°F), when the audience size exponentially increases
 (effect of 3 Ã 103 increasing to 3 Ã 104.)</li>
 <li>HTML and CSS constructs for representing musical scores.</li>
-<br></ul>
-
+</ul>
 <p>So please can you provide more information on each of these subjects,
 including how long you'd expect the research to take, required staff and
 other resources, and anything else you think we'd need to know? Thanks.<br></p>
