--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -51,7 +51,7 @@ USA<br>
 Dover, CT9 XXX<br>
 UK
 </p>
-<h1>Re: Eileen Dover university application</h1><br>
+<h1>Re: Eileen Dover university application</h1>
 <p>Dear Eileen,<br></p>
 <p>Thank you for your recent application to join us at the University of
 Awesome's science faculty to study as part of your PhD next year. I will
