--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <!-- Add an id attribute with a value of "top" to the opening body tag. -->
 
-    <body id="top">
+    <body>
 
 <!-- PAGE HEADER -->
         <!-- Wrap the top level heading in a header element -->
@@ -22,7 +22,7 @@
 
         <!-- Add the image "patricia-frost-125-edited-medium.jpg" right before the opening <ul> tag of the nav.
         Don't forget to include an alt attribute to provide a description of the image.-->
-              <nav>
+              <nav id="top">
                 <img src="images/patricia-frost-125-edited-medium.jpg" alt="It's an image...use your eyes."> </img>
                 <ul>
                     <li><a href="letter-markup">Letter Markup</a></li>
