--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         Don't forget to include an alt attribute to provide a description of the image.-->
               <nav id="top">
                 <img src="images/patricia-frost-125-edited-medium.jpg" alt="It's an image...use your eyes."> </img>
-                <ul>
+                <ul id="top">
                     <li><a href="letter-markup">Letter Markup</a></li>
                     <li><a href="planets-table">Planets Table</a></li>
                     <li><a href="wanted-poster">Wanted Poster</a></li>
