--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
                         <!-- Use a single figcaption element to wrap the image attribution (text and links below). -->
 
-                        <a href="https://www.flickr.com/photos/eosmaiajohanna/16418452630/">Puddle</a> by
+                      <img src="<a href="https://www.flickr.com/photos/eosmaiajohanna/16418452630/">" alt="Puddle by eosmania licensed under CC BY 2.0"> Puddle</a> by
                         <a href="https://www.flickr.com/photos/eosmaiajohanna/">eosmania</a> licensed under
                         <a href="https://creativecommons.org/licenses/by/2.0/legalcode">CC BY 2.0</a>
                 </figure>
