--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!-- PAGE HEADER -->
         <!-- Wrap the top level heading in a header element -->
           <header>
-            <h1>truffaut&nbsp;&nbsp;//&nbsp;&nbsp;portfolio</h1>
+            <h1>truffaut<span&nbsp;&nbsp;&nbsp;&nbsp;>portfolio</h1>
           </header>
 <!-- NAVIGATION BAR -->
         <!-- Wrap the unordered list of links in a nav element -->
@@ -63,7 +63,7 @@
                 <!-- Create an article. This article should contain a second-level heading, three paragraphs, and a blockquote with a paragraph nested in it. -->
 
                     <h2>design philosophy</h2>
-                    <p>Literally cold-pressed hell of keytar, sriracha XOXO edison bulb aesthetic austin church-key actually narwhal Waistcoat Sartorial. Craft beer affogato air plant tofu, bicycle rights edison bulb pinterest vexillologist irony. Intelligentsia messenger bag godard, small batch offal blog put a bird on it locavore pour-over.</p>
+                    <p><i>Literally cold-pressed hell of keytar</i>, sriracha XOXO edison bulb aesthetic austin church-key actually narwhal <a href="/docs/waistcoat-sartorial.pdf" download> waistcoat sartorial. </a> Craft beer affogato air plant tofu, bicycle rights edison bulb pinterest vexillologist irony. Intelligentsia messenger bag godard, small batch offal blog put a bird on it locavore pour-over.</p>
                     <p>Lyft readymade chia, echo park seitan schlitz health goth. Kale chips cloud bread photo booth church-key air plant. Four loko etsy actually shabby chic. Brunch drinking vinegar fingerstache plaid +1 selfies thundercats. Kombucha fingerstache disrupt lo-fi pour-over actually. Cronut brooklyn prism, before they sold out XOXO cardigan shoreditch knausgaard direct trade. Synth fashion axe slow-carb heirloom air plant.</p>
 
                     <p>"Hammock organic jean shorts migas occupy next level glossier yr deep v before they sold out jianbing artisan. Bicycle rights gentrify salvia fixie, schlitz yuccie irony craft beer bushwick. Live-edge austin hammock pinterest actually readymade."</p>
@@ -92,8 +92,8 @@
                         <!-- Add the image "puddle-1-medium.jpg" to the figure. Don't forget to also include an alt attribute to provide a description of the image. -->
 
                         <!-- Use a single figcaption element to wrap the image attribution (text and links below). -->
-
-                      <img src="<a href="https://www.flickr.com/photos/eosmaiajohanna/16418452630/">" alt="Puddle by eosmania licensed under CC BY 2.0"> Puddle</a> by
+                      <img src="images/puddle-1-medium.jpg" alt="Frozen pond">
+                        <a href="https://www.flickr.com/photos/eosmaiajohanna/16418452630/">" alt="Puddle by eosmania licensed under CC BY 2.0"> Puddle</a> by
                         <a href="https://www.flickr.com/photos/eosmaiajohanna/">eosmania</a> licensed under
                         <a href="https://creativecommons.org/licenses/by/2.0/legalcode">CC BY 2.0</a>
                 </figure>
@@ -104,7 +104,7 @@
                         <!-- Add the image "puddle-2-medium.jpg" to the figure. Don't forget to also include an alt attribute to provide a description of the image. -->
 
                         <!-- Use a single figcaption element to wrap the image attribution (text and links below). -->
-
+                      <img src="images/puddle-2-medium.jpg" alt="Puddle with concrete">
                         <a href="https://www.flickr.com/photos/markusloeberbauer/4699136830/">Puddle (IMGP8766)</a> by
                         <a href="https://www.flickr.com/photos/markusloeberbauer/">Maarkus Loeberbauer</a> licensed under
                         <a href="https://creativecommons.org/licenses/by-sa/2.0/legalcode">CC BY SA 2.0</a>
@@ -123,8 +123,8 @@
 
             <!-- Using the text "C.E. Truffaut" create an email hyperlink for the email address "ce.truffaut@cwu.edu". -->
 
-            <p class="return">Back to top</p>
-            <p class="copyright">&copy; 2020 C.E. Truffaut</p>
+            <p class="return"><a href="#top">Back to top</a></p>
+            <p class="copyright">&copy; 2020 <a href="mailto://ce.truffaut@cwu.edu">C.E. Truffaut</a></p>
 
     </body>
 </html>
