--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!-- PAGE HEADER -->
         <!-- Wrap the top level heading in a header element -->
           <header>
-            <h1>truffaut<span&nbsp;&nbsp;&nbsp;&nbsp;>portfolio</h1>
+            <h1>truffaut&nbsp;&nbsp;<span class="slashes"//</span>&nbsp;&nbsp;portfolio</h1>
           </header>
 <!-- NAVIGATION BAR -->
         <!-- Wrap the unordered list of links in a nav element -->
@@ -64,18 +64,18 @@
 
                     <h2>design philosophy</h2>
                     <p><i>Literally cold-pressed hell of keytar</i>, sriracha XOXO edison bulb aesthetic austin church-key actually narwhal <a href="/docs/waistcoat-sartorial.pdf" download> waistcoat sartorial. </a> Craft beer affogato air plant tofu, bicycle rights edison bulb pinterest vexillologist irony. Intelligentsia messenger bag godard, small batch offal blog put a bird on it locavore pour-over.</p>
-                    <p>Lyft readymade chia, echo park seitan schlitz health goth. Kale chips cloud bread photo booth church-key air plant. Four loko etsy actually shabby chic. Brunch drinking vinegar fingerstache plaid +1 selfies thundercats. Kombucha fingerstache disrupt lo-fi pour-over actually. Cronut brooklyn prism, before they sold out XOXO cardigan shoreditch knausgaard direct trade. Synth fashion axe slow-carb heirloom air plant.</p>
+                    <p>Lyft readymade chia, echo park seitan schlitz health goth. Kale chips cloud bread <strong>photo booth</strong> church-key air plant. Four loko etsy actually shabby chic. Brunch drinking vinegar fingerstache plaid +1 selfies thundercats. Kombucha fingerstache disrupt lo-fi pour-over actually. Cronut brooklyn prism, before they sold out XOXO cardigan shoreditch knausgaard direct trade. Synth fashion axe slow-carb heirloom air plant.</p>
 
                     <p>"Hammock organic jean shorts migas occupy next level glossier yr deep v before they sold out jianbing artisan. Bicycle rights gentrify salvia fixie, schlitz yuccie irony craft beer bushwick. Live-edge austin hammock pinterest actually readymade."</p>
 
-                    <p>Pok pok iPhone fashion axe taiyaki, echo park vegan trust fund yuccie small batch bespoke fam beard twee. Seitan actually forage, fanny pack hell of hexagon vaporware. Gluten-free <em>flexitarian cornhole gentrify</em> skateboard keytar. Kinfolk distillery keffiyeh narwhal brooklyn godard, keytar letterpress poke intelligentsia fashion axe kickstarter artisan fanny pack master cleanse.</p>
+                    <p>Pok pok iPhone fashion axe taiyaki, <q>echo park vegan trust fund yuccie small batch bespoke fam beard twee.</q> Seitan actually forage, fanny pack hell of hexagon vaporware. Gluten-free <em>flexitarian cornhole gentrify</em> skateboard keytar. Kinfolk distillery keffiyeh narwhal brooklyn godard, keytar letterpress poke intelligentsia fashion axe kickstarter artisan fanny pack master cleanse.</p>
             </article>
             <!-- ARTICLE 3 -->
             <article>
                 <!-- Create an article. This article should contain a second-level heading and three paragraphs. -->
 
                     <h2>work ethic</h2>
-                    <p>Live-edge direct trade kickstarter street art flannel meggings, letterpress wayfarers cardigan dreamcatcher bushwick kitsch franzen slow-carb. Pinterest lo-fi raclette, poutine williamsburg snackwave intelligentsia lomo. Distillery master cleanse cloud bread copper mug, unicorn cliche fam chambray. Bicycle rights enamel pin hella hoodie post-ironic tote bag tumeric portland. Microdosing VHS kickstarter art party coloring book health goth. Vape pitchfork activated charcoal dreamcatcher chambray.</p>
+                    <p>Live-edge direct trade kickstarter street art <strong>flannel meggings</strong>, letterpress wayfarers cardigan dreamcatcher bushwick kitsch franzen slow-carb. Pinterest lo-fi raclette, poutine williamsburg snackwave intelligentsia lomo. Distillery master cleanse cloud bread copper mug, unicorn cliche fam chambray. Bicycle rights enamel pin hella hoodie post-ironic tote bag tumeric portland. Microdosing VHS kickstarter art party coloring book health goth. Vape pitchfork activated charcoal dreamcatcher chambray.</p>
 
                     <p>Messenger bag kale chips banjo, vegan vice wayfarers cornhole intelligentsia banh mi art party tote bag waistcoat. Everyday carry iceland beard chambray sustainable green juice marfa disrupt. Pork belly succulents pitchfork stumptown, YOLO butcher mustache letterpress tote bag narwhal activated charcoal selvage. Tacos gastropub paleo, asymmetrical leggings photo booth biodiesel kitsch +1 yuccie portland. Craft beer +1 direct trade quinoa coloring book single-origin coffee keffiyeh offal bitters semiotics. Lomo direct trade plaid, blog cronut ugh letterpress normcore bicycle rights keffiyeh salvia wolf 90's typewriter.</p>
 
