--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!-- PAGE HEADER -->
         <!-- Wrap the top level heading in a header element -->
           <header>
-            <h1>truffaut&nbsp;&nbsp;<span class="slashes"//&nbsp;&nbsp;</span>portfolio</h1>
+            <h1>truffaut&nbsp;&nbsp;<span class="slashes">//</span>&nbsp;&nbsp;portfolio</h1>
           </header>
 <!-- NAVIGATION BAR -->
         <!-- Wrap the unordered list of links in a nav element -->
