--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -22,17 +22,17 @@
                 Data about the planets of our solar system (Planetary facts taken from <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).
         </caption>
         <colgroup>
-          <col>
-          <col>
-          <col>
-          <col>
-          <col>
-          <col>
-          <col>
-          <col>
-          <col>
-          <col>
-          <col>
+          <col title="Name">
+          <col title="Mass">
+          <col title="Diameter">
+          <col title="Density">
+          <col title="Gravity">
+          <col title="Length of day">
+          <col title="Distance from sun">
+          <col title="Mean temperature">
+          <col title="Number of Moons">
+          <col title="Notes">
+          <col title="Image">
           <col>
         </colgroup>
         <thead>
