--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -22,6 +22,7 @@
                 Data about the planets of our solar system (Planetary facts taken from <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).
         </caption>
         <colgroup>
+          <col>
           <col title="Name">
           <col title="Mass">
           <col title="Diameter">
@@ -33,13 +34,12 @@
           <col title="Number of Moons">
           <col title="Notes">
           <col title="Image">
-          <col>
         </colgroup>
         <thead>
           <tr></tr>
         </thead>
         <tbody>
-          <tr></tr>
+          <tr>Terrestrial planets</tr>
           <tr></tr>
           <tr></tr>
           <tr></tr>
