--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -23,8 +23,8 @@
         </caption>
         <colgroup>
           <col>
-          <col title="Name">
-          <col title="Mass">
+          <col> <col title="Name">
+          <col> <col title="Mass">
           <col title="Diameter">
           <col title="Density">
           <col title="Gravity">
