--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -39,7 +39,9 @@
           <tr></tr>
         </thead>
         <tbody>
-          <tr>Terrestrial planets</tr>
+          <tr>
+            <td>Terrestrial planets</td>
+          </tr>
           <tr></tr>
           <tr></tr>
           <tr></tr>
