--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -22,9 +22,8 @@
                 Data about the planets of our solar system (Planetary facts taken from <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).
         </caption>
         <colgroup>
-          <col>
-          <col> <col title="Name">
-          <col> <col title="Mass">
+          <col span="2" title="Name">
+          <col title="Mass">
           <col title="Diameter">
           <col title="Density">
           <col title="Gravity">
@@ -41,6 +40,10 @@
         <tbody>
           <tr>
             <td>Terrestrial planets</td>
+            <td>Jovian planets</td>
+            <td>Gas planets</td>
+            <td>Ice planets</td>
+            <td>Dwarf planets</td>
           </tr>
           <tr></tr>
           <tr></tr>
