--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -22,7 +22,8 @@
                 Data about the planets of our solar system (Planetary facts taken from <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).
         </caption>
         <colgroup>
-          <col span="2" title="Name">
+          <col>
+          <col title="Name">
           <col title="Mass">
           <col title="Diameter">
           <col title="Density">
@@ -35,7 +36,10 @@
           <col title="Image">
         </colgroup>
         <thead>
-          <tr></tr>
+          <tr>
+            <td> </td>
+            <th scope="col">Name</th>
+          </tr>
         </thead>
         <tbody>
           <tr>
