--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -39,6 +39,16 @@
           <tr>
             <td> </td>
             <th scope="col">Name</th>
+            <th scope="col">Mass</th>
+            <th scope="col">Diameter</th>
+            <th scope="col">Density</th>
+            <th scope="col">Gravity</th>
+            <th scope="col">Length of day</th>
+            <th scope="col">Distance from sun</th>
+            <th scope="col">Mean temperature</th>
+            <th scope="col">Number of Moons</th>
+            <th scope="col">Notes</th>
+            <th scope="col">Image</th>
           </tr>
         </thead>
         <tbody>
