--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -53,11 +53,11 @@
         </thead>
         <tbody>
           <tr>
-            <td>Terrestrial planets</td>
-            <td>Jovian planets</td>
-            <td>Gas planets</td>
-            <td>Ice planets</td>
-            <td>Dwarf planets</td>
+            <td scope="row">Terrestrial planets</td>
+            <td scope="row">Jovian planets</td>
+            <td scope="row">Gas planets</td>
+            <td scope="row">Ice planets</td>
+            <td scope="row">Dwarf planets</td>
           </tr>
           <tr></tr>
           <tr></tr>
