--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -53,16 +53,20 @@
         </thead>
         <tbody>
           <tr>
-            <td scope="row">Terrestrial planets</td>
-            <td scope="row">Jovian planets</td>
-            <td scope="row">Gas planets</td>
-            <td scope="row">Ice planets</td>
-            <td scope="row">Dwarf planets</td>
+            <td>Terrestrial planets</td>
           </tr>
-          <tr></tr>
-          <tr></tr>
-          <tr></tr>
-          <tr></tr>
+          <tr>
+            <td>Jovian planets</td>
+          </tr>
+          <tr>
+            <td>Gas planets</td>
+          </tr>
+          <tr>
+            <td>Ice planets</td>
+          </tr>
+          <tr>
+            <td>Dwarf planets</td>
+          </tr>
           <tr></tr>
           <tr></tr>
           <tr></tr>
