--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -53,7 +53,7 @@
         </thead>
         <tbody>
           <tr>
-            <td>Terrestrial planets</td>
+            <td span="2">Terrestrial planets</td>
           </tr>
           <tr>
             <td>Jovian planets</td>
