--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -52,8 +52,8 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td span="2">Terrestrial planets</td>
+          <tr span="2">
+            <td>Terrestrial planets</td>
           </tr>
           <tr>
             <td>Jovian planets</td>
