--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -67,10 +67,18 @@
           <tr>
             <td>Dwarf planets</td>
           </tr>
-          <tr></tr>
-          <tr></tr>
-          <tr></tr>
-          <tr></tr>
+        <tbody>
+          <tr>
+            <td>Mercury</td>
+            <td>Venus</td>
+            <td>Earth</td>
+            <td>Mars</td>
+            <td>Jupiter</td>
+            <td>Saturn</td>
+            <td>Uranus</td>
+            <td>Neptune</td>
+            <td>Jupiter</td>
+          </tr>
         </tbody>
       </table>
     </main>
