--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -53,10 +53,18 @@
         </thead>
         <tbody>
           <tr>
-            <td rowspan="2">Terrestrial planets</td>
+            <td>Terrestrial planets</td>
           </tr>
           <tr>
-            <td>Jovian planets</td>
+            <td>Mercury</td>
+            <td>Venus</td>
+            <td>Earth</td>
+            <td>Mars</td>
+            <td>Jupiter</td>
+            <td>Saturn</td>
+            <td>Uranus</td>
+            <td>Neptune</td>
+            <td>Jupiter</td>
           </tr>
           <tr>
             <td>Gas planets</td>
@@ -69,15 +77,7 @@
           </tr>
         <tbody>
           <tr>
-            <td>Mercury</td>
-            <td>Venus</td>
-            <td>Earth</td>
-            <td>Mars</td>
-            <td>Jupiter</td>
-            <td>Saturn</td>
-            <td>Uranus</td>
-            <td>Neptune</td>
-            <td>Jupiter</td>
+
           </tr>
         </tbody>
       </table>
