--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -55,8 +55,8 @@
           <tr>
             <td>Terrestrial planets</td>
           </tr>
-          <tr>
-            <td>Mercury</td>
+          
+            <tr>Mercury</tr>
             <td>Venus</td>
             <td>Earth</td>
             <td>Mars</td>
