--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -55,9 +55,9 @@
           <tr>
             <td>Terrestrial planets</td>
           </tr>
-          
+
             <tr>Mercury</tr>
-            <td>Venus</td>
+            <tr>Venus</tr>
             <td>Earth</td>
             <td>Mars</td>
             <td>Jupiter</td>
