--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -55,9 +55,9 @@
           <tr>
             <td>Terrestrial planets</td>
           </tr>
-
-            <tr>Mercury</tr>
-            <tr>Venus</tr>
+          <tr>
+            <td>Mercury</td>
+            <td>Venus</td>
             <td>Earth</td>
             <td>Mars</td>
             <td>Jupiter</td>
