--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -54,6 +54,7 @@
         <tbody>
           <tr>
             <td>Terrestrial planets</td>
+            <td>Gas planets</td>
           </tr>
           <tr>
             <td>Mercury</td>
