--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -55,6 +55,7 @@
           <tr>
             <td>Terrestrial planets</td>
             <td>Gas planets</td>
+            <td>Meh</td>
           </tr>
           <tr>
             <td>Mercury</td>
