--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -57,6 +57,8 @@
             <td>Gas planets</td>
             <td>Meh</td>
           </tr>
+        </tbody>
+        <tbody>
           <tr>
             <td>Mercury</td>
             <td>Venus</td>
@@ -68,6 +70,7 @@
             <td>Neptune</td>
             <td>Jupiter</td>
           </tr>
+        </tbody>
           <tr>
             <td>Gas planets</td>
           </tr>
