--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -76,6 +76,7 @@
             <td>Jupiter</td>
           </tr>
         </tbody>
+        <tbody>
           <tr>
             <td>Gas planets</td>
           </tr>
