--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -59,6 +59,9 @@
             <td>Gas planets</td>
           </tr>
           <tr>
+            <td>Jovian planets</td>
+          </tr>
+          <tr>
             <td>Ice planets</td>
           </tr>
           <tr>
