--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -68,6 +68,19 @@
             <td>Dwarf planets</td>
           </tr>
         </tbody>
+        <tbody>
+          <tr>
+            <td>Mercury</td>
+            <td>Venus</td>
+            <td>Earth</td>
+            <td>Mars</td>
+            <td>Jupiter</td>
+            <td>Saturn</td>
+            <td>Uranus</td>
+            <td>Neptune</td>
+            <td>Jupiter</td>
+          </tr>  
+        </tbody>
       </table>
     </main>
 
