--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -52,38 +52,34 @@
           </tr>
         </thead>
         <tbody>
-          // row 1
+      <!--    // row 1 -->
           <tr>
             <td>Terrestrial planets</td>
               <td>Mercury</td>
           </tr>
-          // row 2
+      <!--    // row 2 -->
           <tr>
             <td>Gas planets</td>
             <td>Venus</td>
           </tr>
-          // row 3
+        <!--  // row 3 -->
           <tr>
             <td>Jovian planets</td>
             <td>Earth</td>
           </tr>
-          // row 4
+        <!--  // row 4 -->
           <tr>
             <td>Ice planets</td>
             <td>Mars</td>
           </tr>
-          // row 5
+        <!--  // row 5 -->
           <tr>
             <td>Dwarf planets</td>
             <td>Jupiter</td>
           </tr>
-          // row 6
+        <!--  // row 6 --->
           <tr>
-            <td> </td> // col 1
-            <td> </td> // col 2
-            <td> </td> // col 3
-            <td> </td> // col 4
-            <td> </td> // col 5
+            <td> </td>
             <td> Saturn </td>
 
           </tr>
