--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -79,7 +79,7 @@
           </tr>
         <!--  // row 6 --->
           <tr>
-            <td> </td>
+            <td> &nbsp </td>
             <td> Saturn </td>
 
           </tr>
