--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -64,7 +64,7 @@
               <td>167</td>
               <td>0</td>
               <td>Closest to the sun</td>
-              <td> <img src="/images/mercury.jpg" alt="image of mercury"> </td>
+              <td> <img src="/planets-table/images/mercury.jpg" alt="image of mercury"> </td>
           </tr>
           <tr>
             <th scope="row">Venus</th>
