--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -90,7 +90,7 @@
             <td>15</td>
             <td>1</td>
             <td>Our world</td>
-            <td><img src="/planets-table/images/earth.jpg" alt="image of earth"></td>
+            <td><img src="/planets-table/images/earth.png" alt="image of earth"></td>
           </tr>
           <tr>
             <th scope="row">Mars</th>
