--- a/school-site/index.html
+++ b/school-site/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="author" content="John Durham">
+        <meta name="author" content="Austin Clerget">
         <title>Franzen Irony University</title>
-        
+
         <!-- Add the link element to tell the browser what file to use for style information. -->
-    
+
     </head>
     <body>
         <header>
@@ -24,7 +24,7 @@
         <main>
             <section>
                 <h2>Loko Kogi Fixie</h2>
-                <p>Sustainable taiyaki put a bird on it, stumptown tilde pop-up seitan vape chambray jean shorts tumblr hammock shaman. Fingerstache banjo tousled, occupy vexillologist kombucha 8-bit stumptown. 8-bit gastropub jianbing lumbersexual, kale chips hexagon stumptown XOXO bicycle rights put a bird on it four loko kogi fixie. Chartreuse yuccie chambray brooklyn prism 
+                <p>Sustainable taiyaki put a bird on it, stumptown tilde pop-up seitan vape chambray jean shorts tumblr hammock shaman. Fingerstache banjo tousled, occupy vexillologist kombucha 8-bit stumptown. 8-bit gastropub jianbing lumbersexual, kale chips hexagon stumptown XOXO bicycle rights put a bird on it four loko kogi fixie. Chartreuse yuccie chambray brooklyn prism
                     <a href="https://en.wikipedia.org/wiki/Kombucha">Kombucha</a>,
                     <a href="https://en.wikipedia.org/wiki/Chicharr%C3%B3n">Chicharrón</a>,
                     <a href="https://en.wikipedia.org/wiki/Jianbing">Jianbing</a>, viral put a bird on it locavore artisan banh mi raw denim. Put a bird on it farm-to-table food truck hammock <a href="https://en.wikipedia.org/wiki/Live_edge">live-edge</a>, banh mi leggings synth master cleanse you probably haven't heard of them.</p>
