--- a/school-site/index.html
+++ b/school-site/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="author" content="Austin Clerget">
+        <meta name="author" content="Austin ">
         <title>Franzen Irony University</title>
 
-        <!-- Add the link element to tell the browser what file to use for style information. -->
+        <link rel="stylesheet" type="text/css" href="/css/style.css" />
 
     </head>
     <body>
