--- a/school-site/index.html
+++ b/school-site/index.html
@@ -6,7 +6,7 @@
         <meta name="author" content="Austin ">
         <title>Franzen Irony University</title>
 
-        <link rel="stylesheet" type="text/css" href="/css/style.css" />
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
 
     </head>
     <body>
